added info for SK_H

--- a/SK_Hynix.html
+++ b/SK_Hynix.html
@@ -14,9 +14,7 @@
   <body>
     <header>
       <div id="logo">
-        <a href="index.html"
-          ><img src="assets/images/SK_hynix_logo.jpeg" alt="SK하이닉스 로고" />
-        </a>
+        <a href="../../../index.html">홈 </a>
       </div>
 
       <!-- 사업 부문과 리뷰 정보를 구분한 네비게이션 -->
