--- a/reviews/CIS.html
+++ b/reviews/CIS.html
@@ -3,12 +3,9 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta name="keywords" content="SK하이닉스, 스토리지 솔루션, SSD, 리뷰" />
-    <meta
-      name="description"
-      content="SK하이닉스의 스토리지 솔루션과 SSD 제품에 대한 심층 리뷰."
-    />
-    <title>SK하이닉스 스토리지 솔루션 리뷰</title>
+    <meta name="keywords" content="SK하이닉스, CIS, CMOS" />
+    <meta name="description" content="SK하이닉스의 CIS." />
+    <title>SK하이닉스 CIS</title>
     <link rel="stylesheet" href="../assets/styles.css" />
   </head>
   <body>
@@ -28,17 +25,117 @@
     </header>
 
     <main>
+      <!-- 서론 -->
       <section id="intro">
-        <h1>SK하이닉스 스토리지 솔루션 리뷰</h1>
+        <h1>SK하이닉스 CIS (CMOS 이미지 센서) 리뷰</h1>
         <p>
-          SK하이닉스의 스토리지 솔루션은 데이터 센터와 클라우드 컴퓨팅에
-          필수적인 고성능 SSD를 제공합니다. 이 솔루션은 데이터 처리 속도와
-          효율성을 크게 향상시킵니다.
+          SK하이닉스는 메모리 반도체뿐만 아니라, CMOS 이미지 센서(CIS)
+          분야에서도 혁신적인 기술력을 선보이고 있습니다. CMOS 이미지 센서는
+          카메라, 스마트폰, 자동차 등 다양한 디바이스에서 필수적인 역할을 하며,
+          이미지 데이터를 디지털 신호로 변환하는 핵심 반도체입니다.
         </p>
         <p>
-          본 페이지에서는 SK하이닉스가 제공하는 SSD 제품의 성능과 기술적 우위를
-          심층적으로 분석하고, 시장에서의 반응을 살펴봅니다.
+          SK하이닉스는 고화질, 저전력 소모, 소형화 등 다양한 요구를 충족시키는
+          CIS 제품을 개발하며 글로벌 시장에서의 경쟁력을 강화하고 있습니다.
+          특히, 스마트폰 카메라와 자율주행 자동차의 카메라 모듈 등에 사용되며,
+          그 기술력은 꾸준히 인정받고 있습니다.
         </p>
+        <p>
+          본 페이지에서는 SK하이닉스의 CIS 기술과 제품이 어떻게 발전해왔는지,
+          그리고 시장에서 어떤 평가를 받고 있는지 심층 분석하고, 미래 전망을
+          살펴보겠습니다.
+        </p>
+        <h2>CMOS 이미지 센서의 주요 특징</h2>
+        <p>
+          SK하이닉스의 CIS 제품은 고화질 이미지를 구현하는 동시에 전력 효율성이
+          높은 것이 특징입니다. 특히, 스마트폰 카메라에 탑재되는 CIS는 높은 픽셀
+          밀도를 제공하며, 다양한 조명 환경에서도 뛰어난 성능을 발휘합니다.
+        </p>
+        <p>
+          또한, SK하이닉스는 소형화된 CIS 기술을 통해 자율주행 자동차와 같은
+          첨단 산업용 카메라에서도 높은 성능을 발휘할 수 있도록 최적화된 제품을
+          공급하고 있습니다. 이를 통해 이미지 품질과 데이터 처리 속도 모두에서
+          경쟁 우위를 확보하고 있습니다.
+        </p>
+        <p>
+          SK하이닉스의 CIS 기술은 최신 이미지 처리 기술과 결합되어, 다양한 응용
+          분야에서 활용될 수 있는 확장성을 가지고 있으며, 이는 곧 차세대
+          디바이스에서도 중요한 역할을 할 것입니다.
+        </p>
+        <h2>시장 반응 및 미래 전망</h2>
+        <p>
+          SK하이닉스의 CIS는 스마트폰 카메라 시장을 중심으로 큰 성과를 내고
+          있으며, 특히 고급 스마트폰 제조업체들과의 파트너십을 통해 글로벌
+          시장에서 꾸준한 매출 성장을 이어가고 있습니다. 또한, 자율주행 자동차와
+          같은 고부가가치 산업에서도 CIS의 수요가 증가하고 있습니다.
+        </p>
+        <p>
+          향후 SK하이닉스는 자율주행, AI 기술의 발전과 함께 CIS 시장에서의
+          점유율을 더욱 확대할 계획입니다. 특히, 더 정교한 이미지 처리 능력과
+          저전력 설계가 요구되는 차세대 카메라 모듈 시장에서 경쟁력을 높이고자
+          합니다.
+        </p>
+        <p>
+          결론적으로 SK하이닉스의 CMOS 이미지 센서 기술은 시장에서 높은 평가를
+          받고 있으며, 향후 기술 발전과 시장 확장을 통해 글로벌 CIS 리더로서의
+          입지를 강화할 전망입니다.
+        </p>
+        <!-- CIS 세부 사항 섹션 -->
+        <h2>CIS 주요 제품</h2>
+        <div class="card-container">
+          <div class="card">
+            <div class="card-content">
+              <h3>고해상도 CIS</h3>
+              <p>
+                SK하이닉스의 고해상도 CIS는 스마트폰 및 카메라용으로 최적화된
+                제품으로, 높은 해상도와 선명한 이미지를 제공합니다.
+              </p>
+            </div>
+            <a class="card-link" href="https://www.skhynix.com" target="_blank"
+              >자세히 보기</a
+            >
+          </div>
+
+          <div class="card">
+            <div class="card-content">
+              <h3>자동차용 CIS</h3>
+              <p>
+                자동차에 사용되는 CIS는 ADAS(첨단 운전자 지원 시스템)를 위한
+                높은 신뢰성과 안전성을 제공하며, 자율 주행 기술에 필수적인
+                이미지 처리를 지원합니다.
+              </p>
+            </div>
+            <a class="card-link" href="https://www.skhynix.com" target="_blank"
+              >자세히 보기</a
+            >
+          </div>
+
+          <div class="card">
+            <div class="card-content">
+              <h3>저전력 CIS</h3>
+              <p>
+                저전력 CIS는 IoT 기기와 웨어러블 기기에 최적화되어 있으며,
+                배터리 수명을 연장시키면서도 선명한 이미지를 제공합니다.
+              </p>
+            </div>
+            <a class="card-link" href="https://www.skhynix.com" target="_blank"
+              >자세히 보기</a
+            >
+          </div>
+
+          <div class="card">
+            <div class="card-content">
+              <h3>3D 이미지 센서</h3>
+              <p>
+                3D 이미지 센서는 얼굴 인식, AR(증강 현실) 및 VR(가상 현실)
+                애플리케이션에 사용되며, 정확하고 정밀한 이미지를 제공합니다.
+              </p>
+            </div>
+            <a class="card-link" href="https://www.skhynix.com" target="_blank"
+              >자세히 보기</a
+            >
+          </div>
+        </div>
       </section>
     </main>
 
