--- a/reviews/foundry_overview.html
+++ b/reviews/foundry_overview.html
@@ -31,16 +31,116 @@
 
     <main>
       <section id="intro">
-        <h1>SK하이닉스 시스템 반도체 부문 리뷰</h1>
+        <!-- 서론 -->
         <p>
-          SK하이닉스는 AI, IoT, 자율주행 등 다양한 산업에 필요한 시스템 반도체
-          솔루션을 제공합니다. 이 부문은 고성능 컴퓨팅, 네트워크, 저장장치 등
-          현대 IT 환경에서 중요한 역할을 하고 있습니다.
+          SK하이닉스는 메모리 반도체 시장에서의 성공을 바탕으로 파운드리 사업에
+          진출하였으며, 다양한 고객들에게 맞춤형 반도체 제조 서비스를
+          제공합니다. 파운드리 부문은 고객의 요구에 맞춘 공정 기술과 반도체
+          솔루션을 제공하며, 다양한 분야에서 활용됩니다.
         </p>
         <p>
-          본 페이지에서는 SK하이닉스가 개발한 주요 시스템 반도체 제품들과 이들이
-          IT 생태계에 미치는 영향을 분석합니다.
+          파운드리는 반도체 설계와 제조를 분리하여, 외부 고객이 설계한 반도체를
+          대량으로 생산해 주는 역할을 합니다. SK하이닉스는 이 시장에서 경쟁력을
+          높이고, 글로벌 고객들과의 협력 관계를 강화하고 있습니다.
         </p>
+        <p>
+          최근 SK하이닉스는 최신 공정 기술을 도입해 파운드리 사업을 확장하고
+          있으며, 인공지능(AI), 자율주행차, 5G 네트워크 등 다양한 산업 분야에
+          적합한 솔루션을 제공하기 위해 지속적인 투자를 아끼지 않고 있습니다.
+        </p>
+
+        <!-- 중론 -->
+        <p>
+          파운드리 사업은 고객 맞춤형 반도체 제조에 중점을 두고 있으며,
+          SK하이닉스는 이를 위해 다양한 공정 기술과 혁신적인 제조 프로세스를
+          개발하고 있습니다. 특히, 미세 공정 기술을 도입하여 더욱 효율적이고
+          성능이 뛰어난 반도체를 제조할 수 있습니다.
+        </p>
+        <p>
+          고객들은 SK하이닉스의 파운드리 솔루션을 통해 인공지능, 빅데이터,
+          자율주행차 등 첨단 기술에 필요한 맞춤형 반도체를 제작할 수 있습니다.
+          이는 고객들의 제품 개발 주기를 단축시키고, 경쟁력을 높이는 데 기여하고
+          있습니다.
+        </p>
+        <p>
+          또한, SK하이닉스는 고객들과의 긴밀한 협력을 바탕으로 한 맞춤형
+          서비스를 제공하여, 고객의 요구에 맞는 최적의 반도체 솔루션을 제공하고
+          있으며, 이를 통해 글로벌 시장에서의 입지를 강화하고 있습니다.
+        </p>
+
+        <!-- 본론 -->
+        <p>
+          앞으로 SK하이닉스는 파운드리 사업을 더욱 확대해 나갈 계획입니다. 이를
+          위해 최신 제조 공정 기술을 지속적으로 개발하고, 전 세계 주요 반도체
+          기업들과의 협력을 강화하여 기술 혁신을 이끌어 나갈 것입니다.
+        </p>
+        <p>
+          또한, SK하이닉스는 친환경적인 제조 방식을 도입하여 지속 가능한 성장을
+          추구하고 있으며, 이를 통해 반도체 산업에서의 리더십을 유지할
+          계획입니다. 글로벌 시장에서 지속 가능한 반도체 제조 기업으로
+          자리매김하기 위해 환경 보호와 에너지 절약에도 많은 노력을 기울이고
+          있습니다.
+        </p>
+        <p>
+          파운드리 부문은 앞으로도 SK하이닉스의 중요한 성장 동력 중 하나로 남을
+          것이며, 다양한 산업에 필요한 맞춤형 반도체 솔루션을 제공함으로써
+          글로벌 반도체 시장에서의 입지를 더욱 확고히 다질 것입니다.
+        </p>
+        <!-- 파운드리 세부 사항 섹션 -->
+        <h2>파운드리 주요 서비스</h2>
+        <div class="card-container">
+          <div class="card">
+            <div class="card-content">
+              <h3>미세 공정 기술</h3>
+              <p>
+                SK하이닉스의 미세 공정 기술은 10nm 이하의 공정에서 최적의 성능을
+                제공하며, 고성능 컴퓨팅과 AI를 위한 반도체 솔루션을 제공합니다.
+              </p>
+            </div>
+            <a class="card-link" href="https://www.skhynix.com" target="_blank"
+              >자세히 보기</a
+            >
+          </div>
+
+          <div class="card">
+            <div class="card-content">
+              <h3>맞춤형 파운드리 서비스</h3>
+              <p>
+                SK하이닉스는 고객의 요구에 맞춘 맞춤형 반도체 제조 서비스를
+                제공하며, 다양한 산업에 적합한 솔루션을 제공합니다.
+              </p>
+            </div>
+            <a class="card-link" href="https://www.skhynix.com" target="_blank"
+              >자세히 보기</a
+            >
+          </div>
+
+          <div class="card">
+            <div class="card-content">
+              <h3>고성능 반도체 제조</h3>
+              <p>
+                고성능 반도체 제조는 자율주행차, AI, IoT 등의 산업에 필수적인
+                고성능 반도체를 생산하며, 최적의 품질과 성능을 보장합니다.
+              </p>
+            </div>
+            <a class="card-link" href="https://www.skhynix.com" target="_blank"
+              >자세히 보기</a
+            >
+          </div>
+
+          <div class="card">
+            <div class="card-content">
+              <h3>최첨단 반도체 패키징</h3>
+              <p>
+                SK하이닉스는 반도체 패키징 기술을 통해 공간 효율성을 극대화하며,
+                다양한 기기에 적합한 반도체 솔루션을 제공합니다.
+              </p>
+            </div>
+            <a class="card-link" href="https://www.skhynix.com" target="_blank"
+              >자세히 보기</a
+            >
+          </div>
+        </div>
       </section>
     </main>
 
